[project]
name = "stancer-lib-python"
dynamic =["version"]
description = "Python SDK for the Stancer API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [

    "requests ~=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "./stancer/version.py"

[tool.hatch.build.targets.wheel]
packages = ["./stancer/"]

[dependency-groups]
dev = [
    "bandit ~=1.8",
    "hatchling ~=1.27",
    "importlib-metadata ~=8.7",
    "mypy ~=1.17",
    "mypy[reports] ~=1.17",
    "pylint ~=3.3",
    "pylint-gitlab ~=2.0",
    "pylint-quotes ~=0.2",
    "pytest ~=8.4",
    "pytest-cov ~=6.2",
    "pytest-xdist ~=3.8",
    "pytz ~=2025.2",
    "responses ~=0.25",
    "ruff ~=0.12",
    "types-pytz ~=2025.2.0",
    "typing-extensions ~=4.15",
    "zipp ~=3.23",
]

# REGION ruff
[tool.ruff]
line-length = 88
indent-width = 4


[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
indent-style = "space"
quote-style = "single"

[tool.ruff.lint.isort]
force-single-line = true
from-first = false
length-sort = false
lines-between-types = 1
no-sections = false
relative-imports-order = "furthest-to-closest"
# ENDREGION

# REGION pytest

[tool.pytest.ini_options]
addopts = "--cov=stancer"
looponfailroots = ["stancer", "tests"]
testpaths = ["tests"]
#ENDREGION

# REGION mypy

[tool.mypy]
python_version = "3.9"
# ENDREGION mypy


# REGION bandit
[tool.bandit]
exclude_dirs = [".venv", "tests"]

# ENDREGION
