[project]
name = "stancer-lib-python"
dynamic = ["version"]
description = "Python SDK for the Stancer API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests ~=2.32.5",
    "typing-extensions ~=4.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "./stancer/version.py"

[tool.hatch.build.targets.wheel]
packages = ["./stancer/"]

[dependency-groups]
dev = [
    "bandit ~=1.8",
    "mypy[reports] ~=1.17",
    "pylint ~=3.3",
    "pylint-gitlab ~=2.0",
    "pylint-quotes ~=0.2",
    "pytest ~=8.4",
    "pytest-cov ~=6.2",
    "pytest-xdist ~=3.8",
    "pytz",
    "responses ~=0.25",
    "ruff ~=0.12",
    "types-pytz",
    "types-pexpect ~=4.9.0",
    "types-pygments ~=2.19.0",
    "types-pyyaml ~=6.0.12",
    "types-requests ~=2.32.4",
    "types-setuptools ~=80.9.0",
]


#REGION ruff
[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
indent-style = "space"
quote-style = "single"

[tool.ruff.lint.isort]
force-single-line = true
from-first = false
length-sort = false
lines-between-types = 1
no-sections = false
relative-imports-order = "furthest-to-closest"
#ENDREGION


#REGION pytest
[tool.pytest.ini_options]
looponfailroots = ["stancer", "tests"]
testpaths = ["tests"]
#ENDREGION


#REGION mypy
[tool.mypy]
python_version = "3.10"
exclude = [
    "dist",
]
#ENDREGION mypy


#REGION bandit
[tool.bandit]
exclude_dirs = [
    ".venv",
    "tests",
]
#ENDREGION
